--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate && prisma db push",
     "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
