--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@apollo/client": "^4.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/material": "^7.3.1",
+    "@mui/styled-engine-sc": "^7.3.1",
     "graphql": "^16.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "rxjs": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "rxjs": "^7.8.2",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
